# aihub

./: Cargo.toml  README.md
src/: api.md  cli.rs  config.rs  main.rs
src/client/: openai.rs
