[package]
name = "aihub"
version = "0.1.0"
edition = "2024"
authors = ["beingglitch <surajshukla5604@gmail.com>"]
description = "A fast, lightweight CLI for interacting with AI language models"
license = "MIT"
repository = "https://github.com/beingglitch/aihub"
homepage = "https://github.com/beingglitch/aihub"
documentation = "https://github.com/beingglitch/aihub"
readme = "README.md"
keywords = ["ai", "cli", "openai", "llm", "chatgpt"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
